--- a/timeline.html
+++ b/timeline.html
@@ -38,11 +38,9 @@
 						<span class="say">Anh đã không tin điều đó nữa đến khi anh gặp em</span><br>
 						<span class="say">Anh đã phát hiện ra anh đã mang một căn bệnh mà có lẽ,</span><br>
 						<span class="say">Có lẽ sẽ không bao giờ có thuốc điều trị</span><br>
-						<span class="say">Đó là căn bệnh hạnh phúc nhất mà anh mai mắn được mắc phải</span><br>
-						<span class="say">Đó là bệnh yêu em quá nhiều</span><br>
-						<span class="say">Yêu em cho đến khi nào anh không còn tồn tại <3</span><br>
-						<span class="say">Hãy cứ tin em nhé.</span><br>
-						<span class="say">Chúc em sinh nhật vui vẽ.</span><br>
+						<span class="say">Nhưng anh vẫn sẽ cố gắng thể hiện tình yêu với em</span><br>
+						<span class="say">Hãy cứ tin anh em nhé.</span><br>
+						<span class="say">Chúc em sinh nhật vui vẻ.</span><br>
 						<span class="say"> </span><br>
                         <span class="say"><span class="space"></span> -- Anh yêu Em --</span>
 			  </font></p>
